<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/wage_calculator"
        android:textColor="#000000"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/employee_name"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button"
        android:layout_width="152dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:text="@string/calculate"
        app:backgroundTint="#000000"
        app:layout_constraintEnd_toEndOf="@+id/Hours"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="@+id/Hours"
        app:layout_constraintTop_toBottomOf="@+id/Hours" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="8"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:autofillHints="" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/employee_type"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <RadioGroup
        android:id="@+id/employeeType"
        android:layout_width="192dp"
        android:layout_height="139dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <RadioButton
            android:id="@+id/radio_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/regular_employee"
            android:checked="true"
            tools:layout_editor_absoluteX="140dp"
            tools:layout_editor_absoluteY="350dp" />

        <RadioButton
            android:id="@+id/radio_PartTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/part_time_worker"
            tools:layout_editor_absoluteX="144dp"
            tools:layout_editor_absoluteY="395dp" />

        <RadioButton
            android:id="@+id/radio_probationary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/probationary_employee"
            tools:layout_editor_absoluteX="144dp"
            tools:layout_editor_absoluteY="395dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/hours_worked_1_8_hours"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/employeeType"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="@+id/employeeType"
        app:layout_constraintTop_toBottomOf="@+id/employeeType" />

    <EditText
        android:id="@+id/Hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:digits="0123456789"
        android:ems="8"
        android:hint="@string/whole_number"
        android:inputType="number"
        android:text="@string/_0"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>